css/app.css
/* BASICS */
:root {
  --grey: #b7b7b7;
  --lightgrey: lightgrey;
  --bgcolor: white;
  --contrast: black;
  --dropdown: url('../img/dropdown-light.svg');
}
@media (prefers-color-scheme: dark) {
  :root {
    --bgcolor: #171717;
    --contrast: #C8C8C8;
    --dropdown: url('../img/dropdown-dark.svg');
  }
}

@font-face {
  font-family: 'Luminari';
  font-style: normal;
  font-weight: normal;
  src: local('Luminari'), url('../fonts/Luminari-Regular.woff') format('woff');
}

body {
  margin: 0;
  font-family: Georgia, "Times New roman", serif;
  background-color: var(--grey);
  color: var(--contrast);
}

:is(h1, h2, h3, h4, h5, h6) {
  font-family: Luminari, Times, serif;
}

input:not([type="checkbox"]), select {
  font-family: inherit;
  font-size: inherit;
  border-radius: 0;
  -webkit-appearance: none;
  padding-inline: .125rem;
  background-color: var(--bgcolor);
  color: var(--contrast);
}

input[type="checkbox"] {
  accent-color: var(--bgcolor);
}

select {
  background-image: var(--dropdown);
  background-repeat: no-repeat;
  background-position: 95% 50%;
  background-size: .5rem;
    -moz-appearance: none;
    -webkit-appearance: none;
    appearance: none;
    padding: 0 .75rem 0 .25rem;
}

output {
  display: inline-block;
  font-size: inherit;
  height: 1em;
}
.sr-only {
  border: 0 !important;
  clip-path: inset(50%) !important;
  height: 1px !important;
  margin: -1px !important;
  overflow: hidden !important;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
  white-space: nowrap !important;
}

.hidden {
  display: none;
}

.text-align-center {
  text-align: center;
}

.error {
  color: red;
}

/* INDEX PAGE */

.wrapper {
  margin: 0 auto;
  max-width: 38rem;
}

.logo {
  display: block;
  margin: 0 auto;
}

.tabs {
  background-color: var(--bgcolor);
  border-radius: .25rem;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  overflow: hidden;
}

.tab {
  flex: 1 0 50%;
  text-align: center;
  padding: .75rem 0;
  color: var(--contrast);
  text-decoration: none;
  font-weight: bold;
}
.tab:is(:hover, :focus, :active, :not(.active)) {
  background-color: var(--lightgrey);
}
.tab:is(:not(.active)) {
  opacity: .5;
}

.tab-panel {
  border-top: 1px solid var(--grey);
  box-sizing: border-box;
  flex: 1 0 100%;
  padding: 1rem;
}

.tab-panel:not(:target) {
  display: none;
}

.button {
  display: inline-block;
  padding: .5rem;
  text-decoration: none;
  color: var(--contrast);
  font-weight: bold;
  border: 1px solid var(--contrast);
  border-radius: .25rem;
  background-color: var(--lightgrey);
}

.button:is(:hover, :focus, :active) {
  background-color: var(--grey);
}
.forkme {
  position: absolute;
  top: 0;
  right: 0;
}

/* MAIN LAYOUT */
.app {
  width: 100dvw;
  height: 100dvh;
  scroll-snap-type: y mandatory;
  overflow: auto;
}

.page {
  width: 100%;
  height: 100vh;
  scroll-snap-align: start;
  background-color: var(--contrast);
  @supports (height: 100dvh) {
    height: 100dvh;
  }
}

.page > * {
  background-color: var(--bgcolor);
}

.first {
  position: relative;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
  grid-template-rows: .75fr .75fr .5fr 1.5fr .5fr 1fr;
  gap: .125rem;
  grid-auto-flow: row;
  grid-template-areas:
    "info info info info info info talents talents talents"
    "charac charac charac points points points talents talents talents"
    "charac charac charac Mouvement Mouvement Mouvement talents talents talents"
    "skills skills skills skills skills skills ambitions ambitions ambitions"
    "skills skills skills skills skills skills party party party"
    "skills skills skills skills skills skills party party party";
}

.second {
  position: relative;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
  grid-template-rows: 1fr .75fr 1.25fr 1.25fr 1fr .75fr;
  gap: .125rem;
  grid-auto-flow: row;
  grid-template-areas:
    "armour armour armour armour armour-points armour-points wounds wounds"
    "armour armour armour armour armour-points armour-points wounds wounds"
    "trappings trappings trappings encumbrance armour-points armour-points psychology psychology"
    "trappings trappings trappings encumbrance wealth wealth corruption corruption"
    "weapons weapons weapons weapons spells spells spells spells"
    "weapons weapons weapons weapons spells spells spells spells";
}

@media (orientation: portrait) {
  .first {
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
    grid-template-rows: .75fr .75fr .5fr 1.5fr .5fr 1fr 1fr 1fr 1fr;
    grid-auto-flow: column;
    grid-template-areas:
    "info info info info info info"
    "charac charac charac points points points"
    "charac charac charac Mouvement Mouvement Mouvement"
    "skills skills skills skills skills skills"
    "skills skills skills skills skills skills"
    "skills skills skills skills skills skills"
    "talents talents talents ambitions ambitions ambitions"
    "talents talents talents party party party"
    "talents talents talents party party party";
  }
  .second {
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
    grid-template-rows: 1fr .75fr 1.25fr 1.25fr 1fr .75fr 1fr 1fr 1fr 1fr;
    grid-auto-flow: column;
    grid-template-areas:
      "armour armour armour armour armour-points armour-points"
      "armour armour armour armour armour-points armour-points"
      "trappings trappings psychology psychology armour-points armour-points"
      "trappings trappings corruption corruption armour-points armour-points"
      "trappings trappings wealth encumbrance wounds wounds"
      "trappings trappings wealth encumbrance wounds wounds"
      "weapons weapons weapons weapons weapons weapons"
      "weapons weapons weapons weapons weapons weapons"
      "spells spells spells spells spells spells"
      "spells spells spells spells spells spells";
  }
}
/* ... */

